fixed nav visibility

--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,7 @@ nav {
   position: fixed;
   right: 300px;
   left: 300px;
+  z-index: 1;
 }
 a {
   display: flex;
